--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "node": "0.10.x",
     "npm": "1.4.x"
   },
-  "dependencies": {},
+  "scripts": {
+    "postinstall": "bower install"
+  },
+  "dependencies": {
+    "bower": "~1.2.8"
+  },
   "devDependencies": {
     "grunt-cli": "^0.1.13",
     "grunt-contrib-less": "^0.11.4",
